--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<form method="post" asp-action="CreateRequest" asp-controller="Customer">
+﻿@model IEnumerable<Facility>
+<form method="post" asp-action="CreateRequest" asp-controller="Customer">
     <div class="form-group">
         <label for="exampleFormControlInput1">Subject</label>
         <input name="Subject" class="form-control">
