--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 <environment>
     <link rel="stylesheet" href="~/css/css.css" />
-    <link rel="stylesheet" href="~/css/signin.css" />
+    <link rel="stylesheet" href="~/css/login.css" />
 </environment>
 @{
     ViewData["Title"] = "Log in";
