--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.PhoneNuber"></label>
-                <input asp-for="Input.PhoneNuber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNuber" class="text-danger"></span>
+                <label asp-for="Input.Contact"></label>
+                <input asp-for="Input.Contact" class="form-control" />
+                <span asp-validation-for="Input.Contact" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
