--- a/Views/Admin/ListAccount.cshtml
+++ b/Views/Admin/ListAccount.cshtml
@@ -1,8 +1,8 @@
 ﻿@using OHD_SEM3.Models
 @model List<OHD_SEM3.Models.ViewModel.AccountViewModel>
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "AccountManager";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 <h1>User Roles</h1>
 <table class="table table-striped">
@@ -24,7 +24,7 @@
                 <td>@user.Email</td>
                 <td>@string.Join(" , ", user.Roles.ToList())</td>
                 <td>
-                    <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Manage" asp-route-userId="@user.UserId">Manage Roles</a>
+                    <a class="btn btn-primary" asp-controller="Admin" asp-action="SetRole" asp-route-userId="@user.UserId">Set Roles</a>
                 </td>
             </tr>
         }
