--- a/Views/Admin/ListAccount.cshtml
+++ b/Views/Admin/ListAccount.cshtml
@@ -2,11 +2,11 @@
 @model List<OHD_SEM3.Models.ViewModel.AccountViewModel>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<h1>User Roles</h1>
+<h1 style="color:black;">User Roles</h1>
 <table class="table table-striped">
-    <thead>
+    <thead style="color:black;">
         <tr>
             <th>First Name</th>
             <th>Last Name</th>
