--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<IdentityRole>
+@{ Layout = "_AdminLayout"; }
 
 <h1 class="bg-info text-white">All Roles</h1>
 <a asp-action="Create" class="btn btn-secondary">Create a Role</a>
