--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -72,7 +72,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manager menu:</h6>
                         <a class="collapse-item" asp-action="ListAccount" asp-controller="Admin">Account Manager</a>
-                        <a class="collapse-item" asp-controller="Roles" asp-action="Index">Role Manager</a>
+                        <a class="collapse-item" asp-controller="Role" asp-action="Index">Role Manager</a>
                         <a class="collapse-item" asp-controller="Facilities" asp-action="Index">Faccilies Manager</a>
                     </div>
                 </div>
