--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -50,7 +50,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
-                    <span>User</span>
+                    <span>Action</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">                                           
@@ -65,7 +65,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Actions</span>
+                    <span>Manages</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
@@ -77,26 +77,12 @@
                     </div>
                 </div>
             </li>
-
             <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Action
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Assign Request</span>
-                </a>
-            </li>         
-
+            <hr class="sidebar-divider">         
+       
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Admin" asp-action="AboutUs">
+                <a class="nav-link" asp-controller="Home" asp-action="AboutUs">
                     <i class="fas fa-fw fa-table"></i>
                     <span>About Us</span>
                 </a>
