--- a/Views/Admin/Reject.cshtml
+++ b/Views/Admin/Reject.cshtml
@@ -1,1 +1,7 @@
-﻿
+﻿<form asp-controller="Admin" asp-action="Reject">
+    <div class="form-group">
+        <input name="Status" type="hidden" />
+        <label for="exampleFormControlTextarea1">Remark</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+</form>
