--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -73,7 +73,7 @@
                         <h6 class="collapse-header">Manager menu:</h6>
                         <a class="collapse-item" asp-action="ListAccount" asp-controller="Admin">Account Manager</a>
                         <a class="collapse-item" asp-controller="Role" asp-action="Index">Role Manager</a>
-                        <a class="collapse-item" asp-controller="Facilities" asp-action="Index">Faccilies Manager</a>
+                        <a class="collapse-item" asp-controller="Facility" asp-action="Index">Faccilies Manager</a>
                     </div>
                 </div>
             </li>
