--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using OHD_SEM3.Areas.Identity
 @using OHD_SEM3.Areas.Identity.Pages
+@using OHD_SEM3.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
