--- a/Views/Customer/Welcome.cshtml
+++ b/Views/Customer/Welcome.cshtml
@@ -25,7 +25,7 @@
         <div class="card-body">
             <h5 class="card-title">Information</h5>
             <p class="card-text">Check or update your personal information.</p>
-            <a asp-action="Information" asp-controller="Customer">Start -></a>
+            <a href="">Start -></a>
         </div>
     </div>
 </div>
