--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -55,7 +55,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">                                           
                         <a class="collapse-item" asp-action="ListAssignee" asp-controller="Admin">List Assignee</a>
-                        <a class="collapse-item" asp-action="AssignRequest" asp-controller="Admin">Assign Request</a>                       
+                        <a class="collapse-item" asp-action="ListRequest" asp-controller="Request">Assign Request</a>                       
                     </div>
                 </div>
             </li>
