--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -19,12 +19,14 @@
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group ">
-                <label asp-for="Input.Gender" class="control-label">Gender: </label>
-                <input type="radio" asp-for="Input.Gender" name="Gender" value="Man" class="form-check-input" /><span>Man</span>
-                <input type="radio" asp-for="Input.Gender" name="Gender" value="Woman" class="form-check-input" /><span>Woman</span>
-                <span asp-validation-for="Input.Gender" class="text-danger"></span>
+            </div>          
+            <div class="form-group">
+                <label for="exampleFormControlSelect1">Gender</label>
+                <select class="form-control" id="exampleFormControlSelect1" asp-for="Input.Gender" name="Gender">                   
+                        <option value=Male>Male</option>
+                        <option value=Female>Female</option>
+                        <option value=Male>Other</option>                    
+                </select>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
