--- a/Views/Admin/ListAccount.cshtml
+++ b/Views/Admin/ListAccount.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "AccountManager";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<h1>User Roles</h1>
+<h1>User List</h1>
+<a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary">Create Account</a>
 <table class="table table-striped">
     <thead>
         <tr>
