--- a/Views/Customer/Welcome.cshtml
+++ b/Views/Customer/Welcome.cshtml
@@ -1,5 +1,11 @@
-﻿<style>
-    img{height:248px}
+﻿@{
+    ViewData["Title"] = "Welcome";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<style>
+    img {
+        height: 248px
+    }
 </style>
 <h1 class="text-center">Welcome, LPD Online Help Desk System </h1>
 <div class="card-deck">
