--- a/Views/Role/Create.cshtml
+++ b/Views/Role/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model string
+@{ Layout = "_AdminLayout"; }
 
 <h1 class="bg-info text-white">Create a Role</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
