--- a/Views/Admin/Reject.cshtml
+++ b/Views/Admin/Reject.cshtml
@@ -1,4 +1,5 @@
-﻿<form asp-controller="Admin" asp-action="Reject">
+﻿@{ Layout = "_AdminLayout"; }
+<form asp-controller="Admin" asp-action="Reject">
     <div class="form-group">
         <input name="Status" type="hidden" />
         <label for="exampleFormControlTextarea1">Remark</label>
